src/test/ui/or-patterns/fn-param-wrap-parens.stderr
error: an or-pattern parameter must be wrapped in parentheses
  --> $DIR/fn-param-wrap-parens.rs:14:9
   |
LL | fn fun1(A | B: E) {}
   |         ^^^^^ help: wrap the pattern in parentheses: `(A | B)`

error: aborting due to previous error

